--- a/index.html
+++ b/index.html
@@ -1,46 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="style.css">
+    <title>Products</title>
+    <script src="https://cdn.tailwindcss.com"></script>
 </head>
 
 <body>
-    <h1>Text Editor</h1>
+    <h1>Filter Method</h1>
+    <div class="mx-auto w-[800px]">
+        <input class="w-[600px] border p-3 " id="search" type="search" placeholder="Search Product"/>
 
-    <div>
-        <select name="" id="font-family">
-            <option value="">Select Font Family</option>
-            <option value="monospace">Monospace</option>
-            <option value="serif">Serif</option>
-            <option value="san-serif">San Serif</option>
+        <select name="category" id="category_dropdown">
+            <option value="">Select</option>
+            <option value="men's clothing">Men's Clothing</option>
+            <option value="jewelery">Jewelery</option>
+            <option value="electronics">Electronics</option>
+            <option value="women's clothing">Women's Clothing</option>
         </select>
-        <select name="" id="font-size">
-            <option value="normal">Normal</option>
-            <option value="heading">Heading</option>
-            <option value="subHeading">Subheading</option>
-        </select>
-        <button class="action_btn">bold</button>
-        <button class="action_btn">italic</button>
-        <button class="action_btn">underline</button>
-        <button class="action_btn">right</button>
-        <button class="action_btn">left</button>
-        <button class="action_btn">center</button>
-        <button class="action_btn">justify</button>
+        <!--<input type="range" id="range" min="1" max="50"/>Price -->
     </div>
-
-    <div>
-        <p id="text">Loream ipsum, dolor sit amet cosectetur adipisicing elit. minus explicabo eaque nobis nemo fugit aspernatur
-            reiciendis laboriosam earum vitae dicta ipsum dignissimos vero recusandae necessitatibus tenetur quisquam
-            quod, at esse?
-            Loream ipsum dolor, sit amet cosectetur adipiscing elit. Eveniet eos nam necessitatibus. Et libero
-            voluptate, hic pariatur labore ullam temporibus quas, dolorem nemo error ut sequi perferendis aliquam alias.
-            Reiciendis!
-        </p>
-    </div>
+    <div class="container px-5 py-24 mx-auto">
+        <div id="container" class="flex flex-wrap -m-4"></div>
+        </div>
     <script src="app.js"></script>
 </body>
 </html>
